style/fix: fix horizontal overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   width: 100vw;
+  overflow-x: hidden;
   height: 100%;
 }
 
